# audio_process

./: NOTICE  README.md
doa/: CMakeLists.txt  README.md  package.xml  test.yaml
doa/examples/: multi_ssl_demo.cpp  ssl_demo.cpp
doa/include/: doa_service.h  multi_sound_locator.h
doa/python/: pyproject.toml  setup.py
doa/python/examples/: multi_ssl_demo.py  ssl_demo.py
doa/python/spacemit_audio_process/: __init__.py
doa/python/src/: bindings.cpp
doa/src/: gcc_phat_pair.cpp  gcc_phat_pair.h  multi_sound_locator.cpp  sound_locator.cpp
doa/tests/: doa_pr_contract_test.cpp  test_invalid_input_error_path.sh  test_manual_microphone_smoke.sh  test_synthetic_gcc_contract.sh
